# django-partisan

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  runtests.py
.github/workflows/: main.yml  release.yml
django_partisan/: __init__.py  admin.py  apps.py  exceptions.py  models.py  processor.py  registry.py  settings.py  worker.py  workers_manager.py
django_partisan/config/: configs.py  const.py  processor_configs.py
django_partisan/management/commands/: start_partisan.py
django_partisan/migrations/: 0001_initial.py  0002_auto_20200721_0300.py
django_partisan/registry/: __init__.py  initializer.py  registry.py
django_partisan/settings/: __init__.py  config.py  const.py  defaults.py  settings_models.py  utils.py
django_partisan/tests/: fixtures.py  test_basic.py  test_command.py  test_configs.py  test_exceptions.py  test_models.py  test_registry.py  test_settings.py  test_task_processor.py  test_worker.py  test_workers_manager.py
django_partisan/utils/: __init__.py  _macos.py
stubs/: setproctitle.pyi
test_partisan/: manage.py
test_partisan/test_app/: models.py  partisan_tasks.py
test_partisan/test_app/migrations/: 0001_initial.py
test_partisan/test_partisan/: settings.py  test_settings.py
tests/: docker-compose.yaml  test_basic.py  test_command.py  test_settings.py
